--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
+    "next": "^10.1.3",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
