--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
     "next": "^10.1.3",
+    "plotly.js": "^1.58.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-editor-js": "^1.9.0",
+    "react-plotly.js": "^2.5.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
