--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
+    "moment": "^2.29.1",
     "next": "^10.1.3",
     "plotly.js": "^1.58.4",
     "postcss-cli": "^8.3.1",
