--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,15 @@
     "plotly.js": "^1.58.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-editor-js": "^1.9.0",
     "react-plotly.js": "^2.5.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
