--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
@@ -25,8 +26,10 @@
     "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-editor-js": "^1.9.0",
+    "react-json-csv": "^2.0.0",
     "react-plotly.js": "^2.5.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
@@ -34,6 +37,7 @@
     "react-scroll": "^1.8.2",
     "react-tooltip": "^4.2.21",
     "web-vitals": "^1.1.1",
+    "xlsx": "^0.17.0",
     "yup": "^0.32.9"
   },
   "scripts": {
