--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-editor-js": "^1.9.0",
     "react-html-table-to-excel": "^2.0.0",
+    "react-paginate": "^7.1.3",
     "react-plotly.js": "^2.5.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
